# navgreen-cubes

./: .gitignore  README.md  pyproject.toml
netcdf/: loader.py  stat_analysis.py
